--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">diabetes</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="blood_measurements">Blood Measurements</string>
+    <string name="nutrition_information">Nutrition Information</string>
+    <string name="workout_information">Workout Information</string>
+    <string name="close">Close</string>
 
 </resources>
