Started using dialogs in order to properly display what I want when a push button is clicked.  I have problems with the modal dialogs (AlertDialog does not seem to work, eventhough I ask from the dialog to not be a cancelable one).

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="nutrition_information">Nutrition Information</string>
     <string name="workout_information">Workout Information</string>
     <string name="close">Close</string>
+    <string name="data_of_a_blood_glucose_measurement_">Data of a blood glucose measurement.</string>
 
 </resources>
