--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="workout_information">Workout Information</string>
     <string name="close">Close</string>
     <string name="data_of_a_blood_glucose_measurement_">Data of a blood glucose measurement.</string>
+    <string name="blood_glucose_stats">Blood Glucose Stats</string>
+    <string name="display_charts_of_measurements_">Display charts of measurements.</string>
+    <string name="title_activity_plot">PlotActivity</string>
 
 </resources>
