--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="blood_glucose_stats">Blood Glucose Stats</string>
     <string name="display_charts_of_measurements_">Display charts of measurements.</string>
     <string name="title_activity_plot">PlotActivity</string>
+    <string name="title_activity_workout">Workout Activity</string>
     <string name="timesTitle">Time</string>
     <string name="glucoseTitle">Glucose</string>
 
